--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.9.3"
 Pillow = "^9.2.0"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.1"
+pytest-factoryboy = "^2.5.0"
 
 
 [build-system]
